--- a/config.example.toml
+++ b/config.example.toml
@@ -2,6 +2,10 @@ token = "[your token here]"
 prefix = "[your prefix here]"
 
 # Put your guild-specific configuration(s) here
-# [guilds.guild_id]
-# thresholds = { [minutes] = [# points], ...}
-# bonus_role = [bonus role ID]
+[guilds.guild_id]
+thresholds = { minutes = points, ... }
+bonus_role = role_id
+
+[guilds.guild_id.admins]
+users = [user_id, ... ]
+roles = [role_id, ... ]
