--- a/config.example.toml
+++ b/config.example.toml
@@ -3,9 +3,9 @@ prefix = "[your prefix here]"
 
 # Put your guild-specific configuration(s) here
 [guilds.guild_id]
-thresholds = { minutes = points, ... }
+thresholds = { minutes = points } # Multiple can be specified
 bonus_role = role_id
 
 [guilds.guild_id.admins]
-users = [user_id, ... ]
-roles = [role_id, ... ]
+users = [ user_id1, user_id2 ] # ...
+roles = [ role_id1, role_id2 ] # ...
