Implement database migration in the Utilities cog
The Sync cog was also merged with this new one, since I don't feel
like having cogs for single commands.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "pg13"
 version = "1.0.0"
 dependencies = [
-  "discord.py",
+  "aiosqlite",
   "asyncpg",
+  "discord.py",
   "toml"
 ]
 
