--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "ISC"
 python = "^3.10"
 aiosqlite = "^0.17.0"
 asyncpg = "^0.26.0"
-"discord.py" = { git = "https://github.com/Rapptz/discord.py" }
+"discord.py" = "^2.0.0"
 systemd-python = "^234"
 toml = "^0.10.2"
 
