Initial version of Lottery cog (untested as of now)

--- a/config.example.toml
+++ b/config.example.toml
@@ -10,6 +10,7 @@ prefix = "[your prefix here]"
 # bonus_role = [your bonus role id]
 # daily_points = [points]
 # picture_channel = [channel id] (optional)
+# lottery_channel = [channel id] (optional)
 # door_member = [member id]
 
 # [guilds.guild_id.admins]
