--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pg13"
-version = "1.1.0"
+version = "1.2.0"
 description = "A needlessly complicated point system bot for Discord."
-authors = ["Zane Othman-Gomez <zane.othman@gmail.com>"]
+authors = ["5t0n3 <1nk5t0n3@gmail.com>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
